add new homepage new images remove bootstrap css and js files etc

--- a/home.html
+++ b/home.html
@@ -1,59 +1,330 @@
+<!-- This website was developed and is being maintained by Anup Salve. For any suggestions or enquiry contact 
+E-Mail 		:anupsalve8@gmail.com
+Contact No.	:+91 8007 255 828 -->
 <!DOCTYPE html>
 <html>
-<head>
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>Arkilutions - Design and Architecture Coming Soon</title>
-	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-	<meta content="Architectural solutions for your environment. Arkilutions is an organisation based in Pune, India which provides solutions for architectural, interior, landscape, design needs." name="description" />
-	<meta content="architects in pune architecture interior landscape design arkilutions arkilutions.com artefacts for decoration design kumel ghadiali wall-art artwork on wall" name="keywords" />
-	<link href="./css/bootstrap.css" rel="stylesheet" />
-	<link href="./css/custom.css" rel="stylesheet" />
-	<link href="http://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet" type="text/css" />
-	<link href="http://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
-<div class="container"><button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button"></button><a class="brand" data-toggle="tab" href="#home"><text style="font-family:times; font-size:32px"> <strong>A</strong>r<strong style="color:#569E75;">K</strong>ilutions </text> </a></div>
-</div>
-</div>
-<br/>
-<br/>
-<br/>
-<br/>
-<div>
-<p class="info4">Coming Soon</p>
-</div>
-<br />
-<br />
-<div class="row">
-<div class="span4">
-<img alt="Brochure part one" src="./img/logo_1.jpg" width="auto">
-</div>
-<div class="span4">
-<img alt="Brochure part two" src="./img/logo_2.jpg" width="auto">
-</div>
-<div class="span4">
-<img alt="Brochure part three" src="./img/logo_3.jpg" width="auto">
-</div>
-</div>
+	<head>
+		<title>Arkilutions - Design and Architecture</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Architectural solutions for your environment. Arkilutions is an organisation based in Pune, India which provides solutions for architectural, interior and landscape design needs." />
+		<meta name="keywords" content="architects in pune architecture interior landscape design arkilutions arkilutions.com artefacts for decoration design kumel ghadiali wall-art artwork on wall" />
+		<link href="http://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css" />
+		<link href="css/custom.css" rel="stylesheet" />
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	</head>
+	<body>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#" data-toggle="tab">
+						<strong class="logo" style="font-family:times; font-size:32px;"><strong>A</strong>r<strong style="color:#569E75;">K</strong>ilutions</strong>
+					</a>
+					<div class="nav-collapse collapse menu">
+						<ul class="nav logo">
+							<li class="active">
+								<a href="#home" data-toggle="tab">
+									<i class="icon-home"></i>
+									Home
+								</a>
+							</li>
+							<li class="">
+								<a href="#projects" data-toggle="tab">
+									<i class="icon-briefcase"></i>
+									Projects
+								</a>
+							</li>
+							<li class="">
+								<a href="#wallart" data-toggle="tab">
+									<i class="icon-star-empty"></i>
+									Wall-Art
+								</a>
+							</li>
+							<li class="">
+								<a href="#aboutus" data-toggle="tab">
+									<i class="icon-question-sign"></i>
+									Contact Us
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 
-<br />
-<br />
-<div class="container st">
-<div class="row info3">
-<div class="span3"></div>
+		<div class="tab-content">
+			<div class="tab-pane active" id="home">
+				<div class="container">
+					<div class="hero-unit" style="margin-top:6vmax;">
 
-<div class="span3">
-<center style="margin-top:3px;">Connect with us <a href="https://www.facebook.com/pages/ArKilutions/379147545546785" style="width=50px; height=50px;" target="_blank"> <img alt="Facebook Page Link" class="img-circle" height="40" src="./img/fb.ico" width="40" /> </a></center>
-</div>
+						<img src="img/logo_3.jpg" align="right" alt="ArKilutions logo" class="img-polaroid" width="263px" height="309px">
+							<h1><strong class="logo" style="font-family:times; font-size:10vw !important;"><strong>A</strong>r<strong style="color:#569E75;">K</strong>ilutions</strong></h1>							
+							<p>Providing architectural solutions for your environment</p>
+						</img>
+						<br/>
+						<p style="font-family:'oswald';">
+							We at Arkilutions have the sole intention to design elegant, beautiful and functional environments.
+							We specialise in architectural, interior, landscape, product and artefact designing.
+							Designing better every day, so as to capture the beauty of nature and containing it in your environment is our aim.
+							Take a look at the projects we have undertaken under the Projects tab. Also, don't miss out on the Wall-Art tab
+							which is an exclusive technique provided by Arkilutions.
+						</p>
+						<br/>
+					</div>
+					<br/><br/>
+				</div>
+			</div>
 
-<div class="span3"></div>
+	<!-- *********End of first page********* -->
 
-<div class="span3">
-<center style="margin-top:11px;">Website designed by&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="tel:+918007255828" rel="popover" title="Correspondent: +91 8007 255 828"> <text style="font-family:Calligraffitti; font-size:20px;"> Juvenile </text> </a></center>
-</div>
-</div>
-</div>
-<script src="./js/jquery-1.11.1.js"></script><script src="./js/bootstrap.js"></script><script src="./js/custom.js"></script></body>
+			<div class="tab-pane bs" id="projects">
+				<div class="accordion info2" id="accordion2">
+					<div class="accordion-group">
+						<div class="accordion-heading">
+							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne" style="color:black; font-size:20px;">
+								Residential
+							</a>
+						</div>
+
+						<div id="collapseOne" class="accordion-body collapse in">
+							<div class="accordion-inner">
+								<ul class="thumbnails">
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/3_2.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Furnished Flat</h3>
+												<p>The complete flat was furnished by Arkilutions. The bed was custom made to suit the needs of our client.
+												Lighting was provided so as to keep the room appropriately illuminated.
+												<br/><br/></p>
+											</div>
+										</div>
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/1_3.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Bedroom Interiors</h3>
+												<p>The color of the bedroom changed depending on the lighting. In the day the color seems to be of a lighter shade, whereas in the night it
+												seems to be dark. This was a little play in the color and lighting to suit the needs of our client</p>
+											</div>
+										</div>								
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/4_2.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Passageway lights</h3>
+												<p>The allignment was chosen so as to make the passageway look sofisticated.
+												Also, a wall-art was provided in the adjoining hall, which can be seen in the far left of the picture.
+												<br/><br/></p>
+											</div>
+										</div>								
+									</li>
+								</ul>
+							</div>
+						</div>
+						
+					</div>
+					<div class="accordion-group">
+						<div class="accordion-heading">
+							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" style="color:black; font-size:20px;">
+								Offices
+							</a>
+						</div>
+
+						<div id="collapseTwo" class="accordion-body collapse">
+							<div class="accordion-inner">
+								<ul class="thumbnails">
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/2_1.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Office Interiors</h3>
+												<p>The complete office interiors was design to promote productivity. The Tables and chairs are custom made.
+												The inclination of the table was decided with engineering precision,
+												so as to reflect light at accurate angles on the desk.</p>
+											</div>
+										</div>
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/2_2.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Custom-made Chairs</h3>
+												<p>The chairs were designed to give an antiquey look to the furniture. The arm-rest was designed
+												so as to provide proper comfort. There is a play with the table inclination too.
+												<br/><br/></p>
+											</div>
+										</div>								
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/1_1.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Custom-made Sofa</h3>
+												<p>The color of the sofa was chosen to match the entire scheme of the office. As we designed the complete office
+												we could choose the fabric, the wood and the craftsmen providing best services to our clients.</p>
+											</div>
+										</div>								
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					
+					<div class="accordion-group">
+						<div class="accordion-heading">
+							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" style="color:black; font-size:20px;">
+								Commercial
+							</a>
+						</div>
+
+						<div id="collapseThree" class="accordion-body collapse">
+							<div class="accordion-inner">
+								<ul class="thumbnails">
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/5_1.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Shop Interiors</h3>
+												<p>This was a watch shop which was re-designed completely by Arkilutions to provide the right ambience.
+												The colors of the ceiling was chosen so as to reflect light more on the showcase.</p>
+											</div>
+										</div>
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/5_2.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Showcase</h3>
+												<p>This showcase was built from ground up by Arkilutions and was given a small window
+												to put artefacts to attract customers walking on the streets.</p>
+											</div>
+										</div>		
+									</li>
+									<li class="span4">
+										<div class="thumbnail">
+											<img src="img/5_3.JPG" alt="300x300" style="">
+											<div class="caption" style="color:white;">
+												<h3>Tea Trader</h3>
+												<p>An ongoing project for a tea trader. Here we are working with different styling elements
+												rather than the conventional. Innovation is an aspect we focus on.</p>
+											</div>
+										</div>								
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>			
+				</div>
+				<div style="background:inherit; height:200px;"></div>
+			</div>
+		
+	<!--  *********End of second page*********  -->				
+			<div class="tab-pane" id="wallart">
+				<div class="hero-unit" style="margin-top:6vmax;">
+					<h1>Wall-Art</h1>
+					<p style="font-family:'oswald';">This is a techinique where a trained artist paints directly on the wall with washable paints.
+					This gives an aesthetic sense to the walls, removing dull; monotonous colors and filling it with a vibrant story.
+					This technique has been well-received and applauded by our clients.</p>
+				</div>
+				<div class="container">
+					<ul class="thumbnails">
+						<li class="span4">
+							<div class="thumbnail">
+								<img src="img/4_1.JPG" alt="300x300">
+								<div class="caption">
+									<h3>The Buddha</h3>
+									<p>Our client wanted to place an idol and we provided it with the perfect background.
+									It gives a somewhat three-dimentional look and builds up the scene of the meditating buddha.</p>
+								</div>
+							</div>
+						</li>
+						<li class="span4">
+							<div class="thumbnail">
+								<img src="img/4_3.JPG" alt="300x300">
+								<div class="caption">
+									<h3>The Fields</h3>
+									<p>The fake wall was created to display this artwork. This provides the aesthetic look promised.
+									Our client wanted a scenario of a field. This wall-art was made to create that theme.</p>
+								</div>
+							</div>								
+						</li>
+						<li class="span4">
+							<div class="thumbnail">
+								<img src="img/3_1.JPG" alt="300x300">
+								<div class="caption">
+									<h3>The Circles</h3>
+									<p>This was painted on a vertical piece of furniture which could be extended horizontally 
+									to provide a desk. After extension too the art remains complete. Visit our page for more.</p>
+								</div>
+							</div>								
+						</li>
+					</ul>					
+				</div>
+				<br/><br/>			
+			</div>
+		
+	<!-- *********End of third page********* -->				
+			<div class="tab-pane" id="aboutus">
+				<div class="row"  style="margin-top:10%;">
+					<div class="span4">
+						<img src="img/logo_1.jpg" alt="Arkilutions Logo Image" style="">
+					</div>
+						<div class="span4"><br/><br/><br/>
+							<address>
+								<text class="pull-right" style="font-family:Times;font-size:40px;">ArKilutions</text><br/><br/>
+								<small class="pull-right">Design Consultants</small><hr/>
+								<text class="pull-right"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10, Old Bazaar, </text>
+								<text class="pull-right"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Khadki, Pune- 411003 </text></br></br>
+								<a class="pull-right" href="mailto:#">ak_designers@yahoo.com</a>
+								<p class="pull-right" style="display:inline;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<abbr title="Phone">P:</abbr><a href="tel:+912025824786">(+9120) 258-247-86</a><br/></p>
+								<text class="pull-right" style="font-family:Times;font-size:28px;">Kumel Ghadiali</text>
+								<br/><br/><br/><br/>
+								<small class="pull-right">Principal Designer</small>
+								<br/>
+								<p class="pull-right" style="display:inline;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <abbr title="Mobile">M:</abbr><a href="tel:+918956579200">(+91) 895-657-9200</a></p>
+							</address>
+						</div>
+					<div class="span4">
+						<img src="img/logo_3.jpg" alt="Arkilutions Logo Image" style="">					
+					</div>	
+				</div>
+			</div>
+		
+	<!-- *********End of fourth page********* -->		
+		</div>
+
+		<div class="container st">
+			<div class="row info3">
+				<div class="span4"></div>
+				<div class="span2">
+					<center style="margin-top:3px;">Connect with us
+						<a href="https://www.facebook.com/pages/ArKilutions/379147545546785" target="_blank" style="width=50px;height=50px;">
+							<img src="img/fb.ico" alt="Facebook Page Link" width="40" height="40" class="img-circle"></img>
+						</a>
+					</center>
+				</div>
+				<div class="span3">
+					<center style="margin-top:11px;">
+						Website designed by&nbsp;&nbsp;
+						<a href="tel:+918007255828" rel="popover" title="M: +91 8007 255 828">
+								Dragon Web Services
+						</a>
+						<a class="pull-right" href="#top"><i class="icon-circle-arrow-up"></i>Top</a>
+					</center>
+				</div>
+				<div class="span3"></div>
+			</div>
+		</div>
+	</body>
 </html>
+		 
