--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@ Contact No.	:+91 8007 255 828 -->
 		<link href="http://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css" />
 		<link href="css/custom.css" rel="stylesheet" />
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+		<link rel="shortcut icon" href="http://www.arkilutions.com/img/ak.ico">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 	</head>
